修改SSM基础段落格式

--- a/note.css
+++ b/note.css
@@ -260,3 +260,7 @@ width: 80px;
     width: 100%; /* 使图片宽度始终等于其父容器的宽度 */
     height: auto; /* 保持图片的原始宽高比 */
 }
+.text pre {
+    font-family: Arial, sans-serif;
+    line-height: 1.5;
+  }
