--- a/note.css
+++ b/note.css
@@ -185,6 +185,10 @@ margin-right: 10px;
 display: inline-block;
 width: 100px;
 }
+pre {
+    white-space: pre-wrap;
+}
+
 @media only screen and (max-width: 768px) {
 header {
 padding: 10px;
@@ -263,4 +267,5 @@ width: 80px;
 .text pre {
     font-family: Arial, sans-serif;
     line-height: 1.5;
+    white-space: pre-wrap;
   }
